--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.google.firebase:firebase-core:9.0.1'
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
